# SokudoEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  resources.rc  vcpkg.json
assets/box/: BoxWithSpaces.gltf
assets/mixamo/: FemaleHipHopDancing.fbx  FemaleStandingPose.fbx
assets/mixamo/animations/: BoxingAnimation.fbx  HipHopDancingAnimation.fbx  StandingIdleAnimation.fbx  StandingReactDeathBackwardAnimation.fbx
assets/mixamo/models/: FemaleModel.fbx
assets/scenes/: animations.yaml  animations_ik.yaml  pbr.yaml  test.yaml  test_transform.yaml
assets/sphere/: Sphere.gltf
cmake/: Findimgui-node-editor.cmake
model/: ArrowModel.cpp  ArrowModel.h  CoordinateArrowModel.cpp  CoordinateArrowModel.h  Model.cpp  Model.h
scripts/: clang-format-all.sh  compile-shaders.sh
shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  brdf_lut.frag  brdf_lut.vert  changed.frag  changed.vert  debug_line.vert  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  gltf.frag  gltf.vert  gltf_gpu.frag  gltf_gpu.vert  gltf_sphere.frag  gltf_sphere.vert  grid.frag  grid.vert  irradiance_convolution.frag  line.frag  line.vert  mesh.frag  mesh.vert  pbr_utils.glsl  prefilter.frag  prefilter.vert  primitive.frag  primitive.vert  shared_scene.glsl  skybox.frag  skybox.vert  sprite.frag  sprite.vert
source/animations/: AnimInstance.cpp  AnimInstance.h  AnimParamID.h  AnimationsData.h  AnimationsUtils.cpp  AnimationsUtils.h  Animator.cpp  Animator.h  Skeleton.cpp  Skeleton.h
source/animations/anim-graph/: AnimGraph.cpp  AnimGraph.h  AnimGraphLink.h  AnimGraphPin.h  AnimationContext.h
source/animations/ik/: IIKSolver.h  IKSolverCCD.cpp  IKSolverCCD.h  IKSolverFABRIK.cpp  IKSolverFABRIK.h
source/asset-manager/: Asset.h  AssetManager.h  ModelLoader.cpp  ModelLoader.h  TextureAsset.cpp  TextureAsset.h
source/asset-manager/assets/: MeshAsset.cpp  MeshAsset.h  TextureAsset.cpp  TextureAsset.h
source/components/: Component.h  ComponentFactory.h  IKTargetComponent.cpp  IKTargetComponent.h  MeshComponent.cpp  MeshComponent.h  PointLightComponent.cpp  PointLightComponent.h  RotatingComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp
source/core/: Assertion.h  ComponentReference.h  IUUIDObject.h  SceneObjectReference.h  Singleton.h
source/core/animations/: AnimationsData.h  AnimationsUtils.cpp  AnimationsUtils.h  Animator.cpp  Animator.h  AnimatorSingleton.cpp  AnimatorSingleton.h  Skeleton.cpp  Skeleton.h
source/core/components/: Component.h  ComponentFactory.h  MeshComponent.cpp  MeshComponent.h  RotatingComponent.cpp  RotatingComponent.h  TransformComponent.cpp  TransformComponent.h
source/core/engine/: Engine.cpp  Engine.h  EngineEntry.cpp  EngineState.h  ScopedEnginePause.h  ScopedEngineState.h
source/core/events/: EventDispatcher.h  EventListener.cpp  EventListener.h
source/core/model/: ArrowModel.cpp  ArrowModel.h  CoordinateArrowModel.cpp  CoordinateArrowModel.h  GltfModel.cpp  GltfModel.h  GltfNode.cpp  GltfNode.h  GltfSphere.cpp  GltfSphere.h  GridModel.cpp  GridModel.h  Model.cpp  Model.h
source/core/profiling/: PlotBuffer.cpp  PlotBuffer.h
source/core/scene/: Scene.cpp  Scene.h  SceneEditor.h  SceneImporter.cpp  SceneImporter.h  SceneObject.cpp  SceneObject.h  Serialization.cpp  Serialization.h  Transform.h
source/core/serialization/: Serializable.h
source/core/system/: Drawable.h  System.h  Updatable.h
source/core/tools/: Camera.cpp  Camera.h  Logger.cpp  (+4 more)
source/engine/: Engine.cpp  Engine.h  EngineEntry.cpp  ScopedEngineState.h
source/events/: Event.h  EventDispatcher.h  EventListener.h
source/model/: ArrowModel.cpp  ArrowModel.h  GltfModel.cpp  GltfModel.h  GltfNode.cpp  GltfNode.h  Model.h
source/profiling/: PlotBuffer.cpp
source/resources/: Mesh.h
source/scene/: Scene.cpp  Scene.h  SceneEditor.h  SceneImporter.cpp  SceneImporter.h  Serialization.cpp
source/serialization/: Serializable.h  UUIDSerializationConverter.h
source/system/: Drawable.h  System.h  Updatable.h
source/tools/: Camera.cpp  Camera.h  ColorConverter.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
source/ui/: AnimationSequenceUIWindow.h  ComponentPickerUIWindow.h  MiscUIWindow.h  ProfilingUIWindow.h  SceneUIWindow.cpp  SceneUIWindow.h  UserInterface.cpp  UserInterface.h  ViewportUIWindow.h
source/utils/: FileUtils.cpp  FileUtils.h  ShapeUtils.cpp  ShapeUtils.h
source/vk-renderer/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.h  Framebuffer.h  GltfPipeline.cpp  GltfPipeline.h  GltfSkeletonPipeline.cpp  GltfSkeletonPipeline.h  IndexBuffer.h  Pipeline.cpp  PipelineLayout.cpp  PipelineLayout.h  Primitive.cpp  Primitive.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
source/window/: Window.cpp  Window.h
src/events/: Event.h
src/model/: CoordinateArrowModel.cpp  CoordinateArrowModel.h  GltfModel.cpp  GltfModel.h  GridModel.cpp  GridModel.h  Model.cpp
src/tools/: Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h
src/vk-renderer/: CommandPool.cpp  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  Pipeline.cpp  PipelineLayout.cpp  PipelineLayout.h  Renderpass.cpp  SyncObjects.cpp  Texture.cpp  Texture.h  UserInterface.cpp  VertexBuffer.cpp  VertexBuffer.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
src/window/: Window.cpp
tools/: Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Timer.cpp  Timer.h
vk-renderer/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Framebuffer.cpp  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Shader.h  SyncObjects.cpp  SyncObjects.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VkRenderData.h  VkRenderer.cpp  VkRenderer.h  VkRendererData.h
window/: Window.cpp  Window.h
(+180 files in other folders)
